/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Benjamin Giang
 */

package ucf.assignments;

public class Item
{
    // description: String
    // dueDate: String
    // isCompleted: Boolean

    public Item(String description, String dueDate)
    {
        // init description: String description;
        // init dueDate: String dueDate;
        // set isCompleted: boolean isCompleted = false;
    }

    public static Item ItemUpdateDesc(Item temp)
    {
        // Prompt user for description and replace current
        return temp;
    }

    public static Item ItemUpdateDate(Item temp)
    {
        // Prompt user for dueDate and replace current
        return temp;
    }

    public static Item ItemUpdateCompleted(Item temp)
    {
        // boolean completed = true
        return temp;
    }

}
