/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Benjamin Giang
 */
package ucf.assignments;

public class ToDoList
{
    // Title: String
    // ToDoList = list<items>
    // List Length: 100

    public ToDoList(String title)
    {
        // Title = String Title;
        // Set max size to 100
        // Todolist contains list of items
    }

    public static ToDoList listUpdateTitle(ToDoList temp)
    {
        // Prompt user for title and replace current
        return temp;
    }

}
