/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Benjamin Giang
 */

package ucf.assignments;

import java.io.File;

public class appActions
{
    public static void saveThisList(ToDoList tempList)
    {
        // print list to txt file
    }

    public static void saveALLList(Agenda agenda, ToDoList tempList)
    {
        // go through all lists in agenda
        // print list to txt file
    }

    public static ToDoList loadSingleList(File filename)
    {
        ToDoList temp = null;
        // read txt file
        // insert each line to a list
        return temp;
    }

    public static Agenda loadALLList(File multiple)
    {
        Agenda temp = null;
        // read each txt file and insert to list
        // insert lists to agenda
        return temp;
    }

}
