/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Benjamin Giang
 */

package ucf.assignments;

public class itemActions
{
    public static ToDoList itemAdd(ToDoList tempList)
    {
        // Prompt user for description
        // Prompt user for dueDate
        // Create item
        // add item to list
        return tempList;
    }

    public static ToDoList itemDelete(ToDoList tempList)
    {
        // remove item from list
        return tempList;
    }

    public static ToDoList itemEditDesc(ToDoList tempList, Item tempItem)
    {
        // Prompt user for description and replace
        return tempList;
    }

    public static ToDoList itemEditDate(ToDoList tempList, Item tempItem)
    {
        // Prompt user for dueDate and replace current
        return tempList;
    }

    public static ToDoList itemEditCompleted(ToDoList tempList, Item tempItem)
    {
        // boolean completed = true
        return tempList;
    }

}
