/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Benjamin Giang
 */

package ucf.assignments;

public class listActions
{
    public static Agenda ListAdd(Agenda agenda)
    {
        // prompt for title
        // add list to agenda
        return agenda;
    }

    public static Agenda ListDelete(Agenda agenda, ToDoList tempList)
    {
        // remove list from agenda
        return agenda;
    }

    public static Agenda ListEditTitle(Agenda agenda, ToDoList tempList)
    {
        // prompt for title and replace current
        return agenda;
    }
}
