/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Benjamin Giang
 */

package ucf.assignments;

public class userDisplay
{
    public static void displayAll(ToDoList temp)
    {
        // print everything in list

    }

    public static void displayIncomplete()
    {
        // check for incompleted
        // if incompleted then print
    }

    public static void displayCompleted()
    {
        // check for complete
        // if completed then print
    }
}


