@startuml
'https://plantuml.com/class-diagram

object Application {
Agenda: list<toDoLists>
Number of lists: <100
}

class toDoList {
Title: String
ToDoList = list<items>
// List Length: 100
listUpdateTitle()
}

class item {
Description: String
Due Date: YYYY-MM-DD
itemUpdateDesc()
itemUpdateDate()
itemUpdateCompleted()
}

class userDisplay {

displayAll()
displayIncomplete()
displayCompleted()
}

class appActions {
saveThisList()
saveAllList()
loadSingleList()
loadAllList()
}


class listActions {
listAdd()
listDelete()
----
listEditTitle()
}

class itemActions {
itemAdd()
itemDelete()
----
itemEditDesc()
itemEditDate()
itemEditCompleted()
}

Application <-- toDoList
Application <- appActions
toDoList <- listActions
toDoList <-- item
userDisplay -> toDoList
item <- itemActions


@enduml

The application shall be able to manage at least 100 unique todo lists

A todo list shall have a title
A todo list shall have the capacity to store at least 100 unique items

An item shall have a description
An item shall have a due date, formatted as YYYY-MM-DD

A user shall be able to add a new todo list
A user shall be able to remove an existing todo list
A user shall be able to edit the title of an existing todo list
A user shall be able to add a new item to an existing todo list
A user shall be able to remove an item from an existing todo list
A user shall be able to edit the description of an item within an existing todo list
A user shall be able to edit the due date of an item within an existing todo list
A user shall be able to mark an item in a todo list as complete

A user shall be able to display all of the existing items in a todo list
A user shall be able to display only the incompleted items in a todo list
A user shall be able to display only the completed items in a todo list

A user shall be able to save all of the items in a single todo list to external storage
A user shall be able to save all of the items across all of the todo lists to external storage
A user shall be able to load a single todo list that was previously saved to external storage
A user shall be able to load multiple todo lists that were previous saved to external storage